# GlatiqAP

./: .gitignore  demo_script.md  presentation.md
.cursor/rules/: invoke-galatiq-committee.mdc
_committee/: CHARTER.md  MISSION.md  REGISTRY.md  SESSION_STATE.md
invoice-processor/: PHASE2_PLAN.md  README.md  SESSION_SUMMARY.md  main.py  pyproject.toml  requirements.txt  run_api.py  setup.py
invoice-processor/api/: __init__.py  schemas.py  server.py  streaming_workflow.py
invoice-processor/data/: inventory.db
invoice-processor/data/invoices/: create_sample_pdf.py  invoice1.txt  invoice2.txt  invoice3.txt
invoice-processor/frontend/: index.html  package-lock.json
invoice-processor/frontend/src/: App.jsx  index.css
invoice-processor/frontend/src/components/: AIWorkflowBadge.jsx  ApprovalProcessingModal.jsx  AuditTrailPanel.jsx  CollaboratePanel.jsx  ConfidenceBadge.jsx  ExtractedDataPanel.jsx  InvoiceTable.jsx  PDFViewer.jsx  ProcessingHistoryView.jsx  ProcessingView.jsx  Sidebar.jsx  UploadModal.jsx
invoice-processor/frontend/src/context/: InvoiceContext.jsx
invoice-processor/frontend/src/data/: mockInvoices.js
invoice-processor/frontend/src/pages/: ApprovalsPage.jsx  DetailPage.jsx  InboxPage.jsx  PayPage.jsx  SettingsPage.jsx  VendorsPage.jsx
invoice-processor/src/: __init__.py  client.py  utils.py  workflow.py
invoice-processor/src/agents/: __init__.py  approval.py  ingestion.py  payment.py  validation.py
invoice-processor/src/schemas/: __init__.py  models.py
invoice-processor/src/tools/: __init__.py  database.py  pdf_extractor.py
(+217 files in other folders)
